# terminal_renderer

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  terminal_renderer  vid_master.org
archive/v0.2/: Cargo.toml
archive/v0.2/src/: main.rs
archive/v0.2/src/core/: camera.rs  entity.rs  scene.rs
assets/models/: icosphere.mtl  suzanne.gltf
assets/models/book/: magic_book_blender.mtl
assets/models/djwendel/dragon/: dragon.mtl  (+1 more)
assets/models/newell_teaset/: teapot.mtl
assets/models/platonics/: sphere.mtl
assets/models/tux/: linux-mascot-tux.mtl
old/: README.md
old/src/: lib.rs  main.rs
old/src/core/: frustum.rs  mesh.rs  mod.rs  transform.rs
old/src/renderers/: buffer.rs  cpu_termrenderer.rs  renderer.rs  terminal_pipeline.rs
src/: buffer.rs  camera.rs  cpu_renderer.rs  entity.rs  lib.rs  main.rs  scene.rs  util.rs
src/core/: camera.rs  color.rs  colorf32.rs  engine.rs  entity.rs  face.rs  geometry.rs  light.rs  mesh.rs  mod.rs  pixel.rs  scene.rs  texture.rs  transform.rs  tri.rs
src/core/geometry/: face.rs  mat.rs  mesh.rs  mod.rs  process.rs  resume.tex  tri.rs
src/game/: mod.rs  ship.rs
src/pipeline/: buffer.rs  clipper.rs  lighting.rs  mod.rs  pipeline.rs  rasterizer.rs  terminal_pipeline.rs  window_pipeline.rs
src/renderers/: buffer.rs  cpu_termrenderer.rs  mod.rs  renderer.rs  terminal_pipeline.rs
src/renderers/terminal/: engine.rs  mod.rs  term_pipeline.rs  termbuffer.rs
src/renderers/window/: engine.rs  mod.rs  winbuffer.rs  window_pipeline.rs
v0.2/src/: main.rs
v0.2/src/core/: engine.rs  transform.rs
(+9 files in other folders)
