[package]
name = "terminal_renderer"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = "4.5.26"
crossterm = "0.28.1"
fontdue = "0.9.2"
glam = "0.29.2"
image = "0.25.6"
lazy_static = "1.5.0"
log = "0.4.25"
minifb = "0.27.0"
#nalgebra = "0.33.1"
rand = "0.8.5"
rayon = "1.10.0"
simplelog = "0.12.2"
tobj = "4.0.2"

[lib]



[profile.release]
debug = true


[build]
rustc-wrapper = "sccache"
