[package]
name = "terminal_renderer"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = "4.5.50"
crossterm = "0.28.1"
fontdue = "0.9.3"
glam = "0.29.3"
image = "0.25.8"
lazy_static = "1.5.0"
log = "0.4.28"
minifb = "0.27.0"
rand = "0.8.5"
rayon = "1.11.0"
simplelog = "0.12.2"
tobj = "4.0.3"

[lib]



[profile.release]
debug = true

# [build]
# rustc-wrapper = "sccache"
